more test fix. OutputAnalyzer filter of warnings.